--- a/src/App1.css
+++ b/src/App1.css
@@ -91,8 +91,17 @@ body {
   margin-top: 5px ;
  /* Adjust the width as needed */
 }
+.react-select-big {
+  width: 450px;
+  margin-top: 5px ;
+ /* Adjust the width as needed */
+}
 .input-fields {
-  width: 250px;
+  width: 50px;
+  height: 30px; /* Adjust the width as needed */
+}
+.input-fields-reg {
+  width: 200px;
   height: 30px; /* Adjust the width as needed */
 }
 .app-container {
